--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,7 @@
-API_KEY=
-DATABASE_NAME=
-DATABASE_PORT=
 PORT=
+MONGO_INITDB_ROOT_USERNAME=
+MONGO_INITDB_ROOT_PASSWORD=
+MONGO_DB=
+MONGO_PORT=
+MONGO_HOST=
+MONGO_CONNECTION=
